Cambio de Articulos Alternativos
Cambio de articulos alternativos

--- a/NORI/NORI/App.config
+++ b/NORI/NORI/App.config
@@ -83,9 +83,9 @@
   </startup>
   <connectionStrings>
     <clear />
-    <add name="Nori" connectionString="Data Source=DESKTOP-D5V63NE\SQLEXPRESS;Initial Catalog=NORICUAITITLAN;Integrated Security=False;User ID=sa;Password=123" providerName="System.Data.SqlClient" />
+    <!--<add name="Nori" connectionString="Data Source=DESKTOP-D5V63NE\SQLEXPRESS;Initial Catalog=NORICUAITITLAN;Integrated Security=False;User ID=sa;Password=123" providerName="System.Data.SqlClient" />-->
     <add name="LOCAL" connectionString="Data Source=DESKTOP-D5V63NE\SQLEXPRESS;Initial Catalog=NORICUAITITLAN;Integrated Security=False;User ID=sa;Password=123" providerName="System.Data.SqlClient" />
-    <add name="TEST" connectionString="Data Source=DTMSAP;Initial Catalog=TEST_DTM;Integrated Security=False;User ID=sa;Password=SAPB1Admin" providerName="System.Data.SqlClient" />
+    <!--<add name="TEST" connectionString="Data Source=DTMSAP;Initial Catalog=TEST_DTM;Integrated Security=False;User ID=sa;Password=SAPB1Admin" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <userSettings>
     <Settings.Settings>
@@ -113,5 +113,6 @@
         <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
+	  <AppContextSwitchOverrides value="Switch.System.Windows.Forms.UseLegacyAccessibilityFeatures=false" />
   </runtime>
 </configuration>
