--- a/NORI/NORI/NORI.csproj
+++ b/NORI/NORI/NORI.csproj
@@ -94,6 +94,12 @@
     <Reference Include="BouncyCastle.Cryptography">
       <HintPath>..\..\..\..\..\..\Desktop\NORICFDI\BouncyCastle.Cryptography.dll</HintPath>
     </Reference>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
+      <HintPath>..\packages\CrystalDecisions.CrystalReports.Engine.1.0.0\lib\CrystalDecisions.CrystalReports.Engine.dll</HintPath>
+    </Reference>
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
+      <HintPath>..\packages\CrystalDecisions.Shared.1.0.0\lib\CrystalDecisions.Shared.dll</HintPath>
+    </Reference>
     <Reference Include="DevExpress.BonusSkins.v24.1, Version=24.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Dashboard.v24.1.Core, Version=24.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Dashboard.v24.1.Win, Version=24.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
@@ -933,6 +939,12 @@
     <Compile Include="frmResaltarImagen.Designer.cs">
       <DependentUpon>frmResaltarImagen.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\corteCaja.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\corteCaja.Designer.cs">
+      <DependentUpon>corteCaja.cs</DependentUpon>
+    </Compile>
     <Compile Include="Restaurante\frmComanda.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1254,6 +1266,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmResaltarImagen.resx">
       <DependentUpon>frmResaltarImagen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\corteCaja.resx">
+      <DependentUpon>corteCaja.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
