--- a/NORI/NORI/packages.config
+++ b/NORI/NORI/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle.Cryptography" version="2.0.0" targetFramework="net48" />
+  <package id="CrystalDecisions.CrystalReports.Engine" version="1.0.0" targetFramework="net48" />
+  <package id="CrystalDecisions.Shared" version="1.0.0" targetFramework="net48" />
   <package id="EPPlus" version="7.5.1" targetFramework="net48" />
   <package id="EPPlus.Interfaces" version="7.5.0" targetFramework="net48" />
   <package id="EPPlus.System.Drawing" version="7.5.0" targetFramework="net48" />
