--- a/NORI/NORI/App.config
+++ b/NORI/NORI/App.config
@@ -66,6 +66,21 @@
       <setting name="RootDirectory" serializeAs="String">
         <value />
       </setting>
+      <setting name="rutaReportes" serializeAs="String">
+        <value>C:\Users\Programador\Music\REPORTES\</value>
+      </setting>
+      <setting name="USERBD" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PASSBD" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SERVIDOR" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="BD" serializeAs="String">
+        <value />
+      </setting>
     </Settings.Settings>
     <NORI.Properties.Settings>
       <setting name="conexiones" serializeAs="String">
@@ -82,6 +97,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
       </dependentAssembly>
     </assemblyBinding>
     <AppContextSwitchOverrides value="Switch.System.Windows.Forms.UseLegacyAccessibilityFeatures=false" />
