--- a/NORI/NORI/packages.config
+++ b/NORI/NORI/packages.config
@@ -7,15 +7,25 @@
   <package id="EPPlus.Interfaces" version="7.5.0" targetFramework="net48" />
   <package id="EPPlus.System.Drawing" version="7.5.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net48" />
   <package id="Microsoft.Web.WebView2" version="1.0.2903.40" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net48" />
+  <package id="PDFsharp" version="6.1.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net48" />
   <package id="System.Drawing.Common" version="8.0.4" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
