--- a/NORI/NORI/NORI.csproj
+++ b/NORI/NORI/NORI.csproj
@@ -259,8 +259,9 @@
     <Reference Include="NoriSAPB1SDK">
       <HintPath>..\..\..\..\..\..\Desktop\Librerias\NoriSAPB1SDK.dll</HintPath>
     </Reference>
-    <Reference Include="NoriSDK">
-      <HintPath>..\..\..\..\..\..\Desktop\Librerias\NoriSDK.dll</HintPath>
+    <Reference Include="NoriSDK, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Desktop\NoriSDK.dll</HintPath>
     </Reference>
     <Reference Include="PdfSharp, Version=6.1.1.0, Culture=neutral, PublicKeyToken=f94615aa0424f9eb, processorArchitecture=MSIL">
       <HintPath>..\packages\PDFsharp.6.1.1\lib\netstandard2.0\PdfSharp.dll</HintPath>
@@ -282,7 +283,9 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.8\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
@@ -595,6 +598,19 @@
     <Compile Include="frmGruposSocios.Designer.cs">
       <DependentUpon>frmGruposSocios.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmHome.Designer.cs">
+      <DependentUpon>frmHome.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HuellaDigital\Class\AppData.cs" />
+    <Compile Include="HuellaDigital\frmHuellaDigital.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HuellaDigital\frmHuellaDigital.Designer.cs">
+      <DependentUpon>frmHuellaDigital.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmImpuestos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -732,6 +748,12 @@
     </Compile>
     <Compile Include="frmPropietarios.Designer.cs">
       <DependentUpon>frmPropietarios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HuellaDigital\frmRegistrarHuellaDigital.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HuellaDigital\frmRegistrarHuellaDigital.Designer.cs">
+      <DependentUpon>frmRegistrarHuellaDigital.cs</DependentUpon>
     </Compile>
     <Compile Include="frmRemolques.cs">
       <SubType>Form</SubType>
@@ -908,21 +930,6 @@
       <DependentUpon>frmZonas.cs</DependentUpon>
     </Compile>
     <Compile Include="FuncionesSAP.cs" />
-    <Compile Include="HuellaDigital\frmHuellaDigital.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="HuellaDigital\frmHuellaDigital.Designer.cs">
-      <DependentUpon>frmHuellaDigital.cs</DependentUpon>
-    </Compile>
-    <Compile Include="HuellaDigital\frmHuellaDigitalAgregar.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="HuellaDigital\frmHuellaDigitalVerificar.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="HuellaDigital\frmHuellaDigitalVerificar.Designer.cs">
-      <DependentUpon>frmHuellaDigitalVerificar.cs</DependentUpon>
-    </Compile>
     <Compile Include="frmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -936,6 +943,12 @@
       <DependentUpon>frmSincronizacion.cs</DependentUpon>
     </Compile>
     <Compile Include="Funciones.cs" />
+    <Compile Include="HuellaDigital\frmVerificarHuellaDigital.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HuellaDigital\frmVerificarHuellaDigital.Designer.cs">
+      <DependentUpon>frmVerificarHuellaDigital.cs</DependentUpon>
+    </Compile>
     <Compile Include="Kiosco\frmAltaRapidaSocio.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1186,6 +1199,12 @@
     <EmbeddedResource Include="frmGruposSocios.resx">
       <DependentUpon>frmGruposSocios.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmHome.resx">
+      <DependentUpon>frmHome.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HuellaDigital\frmHuellaDigital.resx">
+      <DependentUpon>frmHuellaDigital.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmImpuestos.resx">
       <DependentUpon>frmImpuestos.cs</DependentUpon>
     </EmbeddedResource>
@@ -1254,6 +1273,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPropietarios.resx">
       <DependentUpon>frmPropietarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HuellaDigital\frmRegistrarHuellaDigital.resx">
+      <DependentUpon>frmRegistrarHuellaDigital.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmRemolques.resx">
       <DependentUpon>frmRemolques.cs</DependentUpon>
@@ -1345,8 +1367,8 @@
     <EmbeddedResource Include="frmZonas.resx">
       <DependentUpon>frmZonas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HuellaDigital\frmHuellaDigitalVerificar.resx">
-      <DependentUpon>frmHuellaDigitalVerificar.cs</DependentUpon>
+    <EmbeddedResource Include="HuellaDigital\frmVerificarHuellaDigital.resx">
+      <DependentUpon>frmVerificarHuellaDigital.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Kiosco\frmAltaRapidaSocio.resx">
       <DependentUpon>frmAltaRapidaSocio.cs</DependentUpon>
@@ -1434,6 +1456,15 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\images.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\121705489-use-la-huella-digital-para-desbloquear-la-mano-humana-del-teléfono-inteligente-moderno.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\inicio.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Web.WebView2.1.0.2903.40\build\Microsoft.Web.WebView2.targets" Condition="Exists('..\packages\Microsoft.Web.WebView2.1.0.2903.40\build\Microsoft.Web.WebView2.targets')" />
