Cambio de Validaciones
Se agregaron validaciones de cantidad en negativo
Validar que articulo tenga IVA
Validar que articulo tenga costo
Bloquear con biometrico

--- a/NORI/NORI/App.config
+++ b/NORI/NORI/App.config
@@ -70,16 +70,16 @@
         <value>C:\Users\Programador\Music\REPORTES\</value>
       </setting>
       <setting name="USERBD" serializeAs="String">
-        <value />
+        <value>sa</value>
       </setting>
       <setting name="PASSBD" serializeAs="String">
-        <value />
+        <value>123</value>
       </setting>
       <setting name="SERVIDOR" serializeAs="String">
-        <value />
+        <value>DESKTOP-D5V63NE\SQLEXPRESS</value>
       </setting>
       <setting name="BD" serializeAs="String">
-        <value />
+        <value>NORICUAITITLAN</value>
       </setting>
     </Settings.Settings>
     <NORI.Properties.Settings>
