--- a/NORI/NORI/NORI.csproj
+++ b/NORI/NORI/NORI.csproj
@@ -259,8 +259,7 @@
     <Reference Include="NoriSAPB1SDK">
       <HintPath>..\..\..\..\..\..\Desktop\Librerias\NoriSAPB1SDK.dll</HintPath>
     </Reference>
-    <Reference Include="NoriSDK, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="NoriSDK">
       <HintPath>..\..\..\CONSOLA\NoriSDK\bin\x64\Debug\NoriSDK.dll</HintPath>
     </Reference>
     <Reference Include="PdfSharp, Version=6.1.1.0, Culture=neutral, PublicKeyToken=f94615aa0424f9eb, processorArchitecture=MSIL">
@@ -603,6 +602,12 @@
     </Compile>
     <Compile Include="frmHome.Designer.cs">
       <DependentUpon>frmHome.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HuellaDigital\AutenticarHuellaDigital.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HuellaDigital\AutenticarHuellaDigital.Designer.cs">
+      <DependentUpon>AutenticarHuellaDigital.cs</DependentUpon>
     </Compile>
     <Compile Include="HuellaDigital\Class\AppData.cs" />
     <Compile Include="HuellaDigital\frmHuellaDigital.cs">
@@ -1202,6 +1207,9 @@
     <EmbeddedResource Include="frmHome.resx">
       <DependentUpon>frmHome.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HuellaDigital\AutenticarHuellaDigital.resx">
+      <DependentUpon>AutenticarHuellaDigital.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HuellaDigital\frmHuellaDigital.resx">
       <DependentUpon>frmHuellaDigital.cs</DependentUpon>
     </EmbeddedResource>
@@ -1465,6 +1473,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\inicio.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logoDTM.jpeg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Web.WebView2.1.0.2903.40\build\Microsoft.Web.WebView2.targets" Condition="Exists('..\packages\Microsoft.Web.WebView2.1.0.2903.40\build\Microsoft.Web.WebView2.targets')" />
