--- a/NORI/NORI/App.config
+++ b/NORI/NORI/App.config
@@ -54,14 +54,12 @@
   </startup>
   <connectionStrings>
     <clear />
-    <!--<add name="Nori" connectionString="Data Source=DESKTOP-D5V63NE\SQLEXPRESS;Initial Catalog=NORICUAITITLAN;Integrated Security=False;User ID=sa;Password=123" providerName="System.Data.SqlClient" />-->
-    <add name="LOCAL" connectionString="Data Source=DESKTOP-D5V63NE\SQLEXPRESS;Initial Catalog=NORICUAITITLAN;Integrated Security=False;User ID=sa;Password=123" providerName="System.Data.SqlClient" />
-    <!--<add name="TEST" connectionString="Data Source=DTMSAP;Initial Catalog=TEST_DTM;Integrated Security=False;User ID=sa;Password=SAPB1Admin" providerName="System.Data.SqlClient" />-->
+    <add name="LOCAL" connectionString="Data Source=DESKTOP-D5V63NE\SQLEXPRESS;Initial Catalog=DTMSOLUTIONS;Integrated Security=False;User ID=sa;Password=123" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <userSettings>
     <Settings.Settings>
       <setting name="conexiones" serializeAs="String">
-        <value>Data Source=DESKTOP-D5V63NE\SQLEXPRESS;Initial Catalog=NORICUAITITLAN;Integrated Security=False;User ID=sa;Password=123</value>
+        <value>Data Source=DESKTOP-D5V63NE\SQLEXPRESS;Initial Catalog=DTMSOLUTIONS;Integrated Security=False;User ID=sa;Password=123</value>
       </setting>
       <setting name="RootDirectory" serializeAs="String">
         <value />
@@ -84,7 +82,7 @@
     </Settings.Settings>
     <NORI.Properties.Settings>
       <setting name="conexiones" serializeAs="String">
-        <value>Data Source=DESKTOP-D5V63NE\SQLEXPRESS;Initial Catalog=NORICUAITITLAN;Integrated Security=False;User ID=sa;Password=123</value>
+        <value>Data Source=DESKTOP-D5V63NE\SQLEXPRESS;Initial Catalog=DTMSOLUTIONS;Integrated Security=False;User ID=sa;Password=123</value>
       </setting>
     </NORI.Properties.Settings>
   </userSettings>
