--- a/NORI/NORI/NORI.csproj
+++ b/NORI/NORI/NORI.csproj
@@ -364,6 +364,12 @@
     <Compile Include="API\SocioAPI.cs" />
     <Compile Include="API\Transmitir.cs" />
     <Compile Include="AutVenta.cs" />
+    <Compile Include="FormVistaPrevia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormVistaPrevia.Designer.cs">
+      <DependentUpon>FormVistaPrevia.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAutorizarPago.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1128,6 +1134,9 @@
       <DependentUpon>frmRestaurante.cs</DependentUpon>
     </Compile>
     <Compile Include="XRDesignRibbonControllerResources.cs" />
+    <EmbeddedResource Include="FormVistaPrevia.resx">
+      <DependentUpon>FormVistaPrevia.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAcceder.resx">
       <DependentUpon>frmAcceder.cs</DependentUpon>
     </EmbeddedResource>
