Cambios del sistema

--- a/DTM/DTM/App.config
+++ b/DTM/DTM/App.config
@@ -68,7 +68,7 @@
         <value>sa</value>
       </setting>
       <setting name="PASSBD" serializeAs="String">
-        <value>Diesel2023DTM</value>
+        <value>123</value>
       </setting>
       <setting name="SERVIDOR" serializeAs="String">
         <value>10.100.12.3</value>
